--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,21 @@
+buildscript {
+    repositories {
+        maven { url = 'https://maven.minecraftforge.net/' }
+        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
+    }
+    dependencies {
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+    }
+}
+
 plugins {
     id 'eclipse'
     id 'maven-publish'
     id 'net.minecraftforge.gradle' version '5.1.+'
 }
+
+apply plugin: 'org.spongepowered.mixin'
 
 version = '1.19.3-0.1'
 group = 'com.github.ilja615.worldupgrade' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -178,4 +191,8 @@ publishing {
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
+}
+
+dependencies {
+    implementation fg.deobf('com.github.glitchfiend:TerraBlender-forge:1.19.3-2.1.0.134')
 }
