--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,11 @@ minecraft {
     runs {
         client {
             workingDirectory project.file('run')
+            arg "-mixin.config=" + "worldupgrade" + ".mixins.json"
+            property("mixin.env.remapRefMap", "true")
+            property("mixin.env.refMapRemappingFile", "$projectDir/build/createSrgToMcp/output.srg")
+
+            workingDirectory project.file('run')
 
             // Recommended logging data for a userdev environment
             // The markers can be added/remove as needed separated by commas.
@@ -73,6 +78,11 @@ minecraft {
 
         server {
             workingDirectory project.file('run')
+            arg "-mixin.config=" + "worldupgrade" + ".mixins.json"
+            property("mixin.env.remapRefMap", "true")
+            property("mixin.env.refMapRemappingFile", "$projectDir/build/createSrgToMcp/output.srg")
+
+            workingDirectory project.file('run')
 
             property 'forge.logging.markers', 'REGISTRIES'
 
@@ -92,6 +102,11 @@ minecraft {
         // The gametest system is also enabled by default for other run configs under the /test command.
         gameTestServer {
             workingDirectory project.file('run')
+            arg "-mixin.config=" + "worldupgrade" + ".mixins.json"
+            property("mixin.env.remapRefMap", "true")
+            property("mixin.env.refMapRemappingFile", "$projectDir/build/createSrgToMcp/output.srg")
+
+            workingDirectory project.file('run')
 
             property 'forge.logging.markers', 'REGISTRIES'
 
@@ -107,6 +122,11 @@ minecraft {
         }
 
         data {
+            workingDirectory project.file('run')
+            arg "-mixin.config=" + "worldupgrade" + ".mixins.json"
+            property("mixin.env.remapRefMap", "true")
+            property("mixin.env.refMapRemappingFile", "$projectDir/build/createSrgToMcp/output.srg")
+
             workingDirectory project.file('run')
 
             property 'forge.logging.markers', 'REGISTRIES'
@@ -191,5 +211,5 @@ repositories {
 
 dependencies {
     implementation fg.deobf('com.github.glitchfiend:TerraBlender-forge:1.19.3-2.1.0.139')
-    implementation fg.deobf('curse.maven:cyanide-541676:4126944')
+    implementation fg.deobf('curse.maven:cyanide-541676:3832812')
 }
